# Chess-Engine-GUI

./: CMakeLists.txt  README.md  main.cpp
Engine/: CMakeLists.txt
Engine/Board/: Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  BoardOccupancies.cpp  BoardOccupancies.h  BoardState.h  BoardUtilities.cpp
Engine/FenParser/: FenParser.h
Engine/MoveGeneration/: Draw.cpp  Draw.h  Move.cpp  Move.h  MoveGeneration.cpp  MoveGeneration.h  MoveTables.h  PseudoMoves.cpp  PseudoMoves.h  SlidingPieces.cpp  SlidingPieces.h
Engine/Utilities/: Utilities.cpp  Utilities.h
Engine/src/Board/: Bitboard.h  Board.h
Engine/src/MoveGeneration/: LeaperPieces.h  Move.h  MoveGeneration.cpp  MoveTables.cpp
Engine/src/Utilities/: EngineUtil.cpp
Frontend/src/: Game.cpp  Game.h  HumanState.h  Options.h  RenderingUtil.cpp  RenderingUtil.h  ResourceManager.cpp  ResourceManager.h  TextureManager.cpp  TextureManager.h  WindowSettings.h
src/: Attacks.h  BitBoard.cpp  Bitboard.h  Board.cpp  Board.h  BoardState.h  EngineUtil.cpp  EngineUtil.h  FenParser.cpp  FenParser.h  MoveGeneration.cpp  MoveGeneration.h  NonSlidingPieces.h  main.cpp
src/Board/: BitBoard.cpp  Bitboard.h  Board.cpp  Board.h  BoardState.h  BoardUtilities.cpp  BoardUtilities.h
src/FenParser/: FenParser.cpp  FenParser.h
src/MoveGeneration/: LeaperPieces.cpp  LeaperPieces.h  MagicNumbers.h  Move.cpp  Move.h  MoveGeneration.cpp  MoveGeneration.h  MoveTables.cpp  MoveTables.h  NonSlidingPieces.h  PseudoMoves.cpp  PseudoMoves.h  SlidingPieces.cpp  SlidingPieces.h
src/Utilities/: EngineUtil.cpp  EngineUtil.h
